syntax = "proto3";
package service.administrator.v1;
option go_package = "yuumi/api/service/administrator/v1;v1";

import "service/administrator/v1/pb_data.proto";

service PermissionService {
  rpc Create (CreatePermissionRequest) returns (CreatePermissionReply) {}
  rpc Delete (DeletePermissionRequest) returns (DeletePermissionReply) {}
  rpc Update (UpdatePermissionRequest) returns (UpdatePermissionReply) {}
  rpc GetInfo (GetPermissionInfoRequest) returns (GetPermissionInfoReply) {}
  rpc GetList (GetPermissionListRequest) returns (GetPermissionListReply) {}
  rpc GetPermissions (GetPermissionsRequest) returns (GetPermissionsReply) {}
  rpc GetPermissionsWithRoleID (GetPermissionsWithRoleIDRequest) returns (GetPermissionsWithRoleIDReply) {}
}

message CreatePermissionRequest {
  string name = 1;
  string rpc_method = 2;
}
message CreatePermissionReply {
  PermissionData permission = 1;
}

message DeletePermissionRequest {
  int64 id = 1;
}
message DeletePermissionReply {
  string Message = 1;
}

message UpdatePermissionRequest {
  int64 id = 1;
  optional string name = 2;
  optional string rpc_method = 3;
}
message UpdatePermissionReply {
  PermissionData permission = 1;
}

message GetPermissionInfoRequest {
  int64 id = 1;
  string rpc_method = 2;
}
message GetPermissionInfoReply {
  PermissionData permission = 1;
}

message GetPermissionListRequest {
  int64 page = 1;
  int64 page_size = 2;
  optional bool preload_roles = 50;
}
message GetPermissionListReply {
  repeated PermissionData permissions = 1;
  PaginationData pagination = 2;
}

message GetPermissionsRequest {}
message GetPermissionsReply {
  repeated PermissionData permissions = 1;
}

message GetPermissionsWithRoleIDRequest {
  int64 role_id = 1;
}
message GetPermissionsWithRoleIDReply {
  repeated PermissionData permissions = 1;
}